k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasky-service
  namespace: default
spec:
  selector:
    app: tasky
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
